--- a/extra-openai-models.yaml
+++ b/extra-openai-models.yaml
@@ -3,3 +3,10 @@
   api_base: "http://localhost:11440/v1"
   api_key_name: "localVLLMModel"
   aliases: ["320"]
+
+- model_id: meta-llama/Llama-3.1-8B-Instruct
+  model_name: meta-llama/Llama-3.1-8B-Instruct
+  api_base: "http://localhost:11440/v1"
+  api_key_name: "localVLLMModel"
+  aliases: ["3212"]
+
